--- a/ytarchive.html
+++ b/ytarchive.html
@@ -1,3 +1,4 @@
+<a target="_blank" href="https://codeberg.org/alceawisteria/YoutubeArchiveSuite#https://codepen.io/ryedai1/pen/ByNGayM" style=color:lightgray>src</a>
 <!DOCTYPE html>
 <html lang="en">
 <head>
