--- a/ytarchive.html
+++ b/ytarchive.html
@@ -158,6 +158,7 @@
         <a href="${v.url}" target="_blank" class="direct-link ${unreachableClass}">Direct</a>
         <a href="${v.waybackurl}" target="_blank">Wayback</a>
         <a href="javascript:void(0);" class="youtube-link" data-id="${v.id}">YouTube</a>
+        <a href="https://web.archive.org/web/2oe_/http://wayback-fakeurl.archive.org/yt/${v.id}" target="_blank" ><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT61taAw7gmjapOgSz2nugoCrazkCg42il25A&s" width=24px></a>
       </div>
       <button class="toggle-src" data-id="${v.id}">🔁 Switch to Direct</button>
     `;
