--- a/ytarchive.html
+++ b/ytarchive.html
@@ -1,3 +1,4 @@
+
 <a target="_blank" href="https://codeberg.org/alceawisteria/YoutubeArchiveSuite#https://codepen.io/ryedai1/pen/ByNGayM" style=color:lightgray>src</a>
 <!DOCTYPE html>
 <html lang="en">
@@ -61,7 +62,7 @@
     .links a {
       font-size: 0.875rem;
       color: #0066cc;
-      margin-right: 1rem;
+      margin-right: 0.25rem;
       text-decoration: none;
     }
     .links a:hover {
@@ -154,11 +155,13 @@
       <p>Uploader: ${v.uploader}</p>
       <p>ID: ${v.id ?? 'N/A'}</p>
       <p>Uploaded: ${new Date(v.uploaded).toLocaleString()}</p>
-      <div class="links">
+            <div class="links">
         <a href="${v.url}" target="_blank" class="direct-link ${unreachableClass}">Direct</a>
-        <a href="${v.waybackurl}" target="_blank">Wayback</a>
+        <a href="${v.waybackurl}" target="_blank">Wayback</a><a target="_blank" href="waybackurlcheck.html?waybackurl=${v.waybackurl}" style=color:green>(?)</a>
         <a href="javascript:void(0);" class="youtube-link" data-id="${v.id}">YouTube</a>
-        <a href="https://web.archive.org/web/2oe_/http://wayback-fakeurl.archive.org/yt/${v.id}" target="_blank" ><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT61taAw7gmjapOgSz2nugoCrazkCg42il25A&s" width=24px></a>
+        <a href="https://web.archive.org/web/2oe_/http://wayback-fakeurl.archive.org/yt/${v.id}" target="_blank" ><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT61taAw7gmjapOgSz2nugoCrazkCg42il25A&s" width=20px></a>
+          <a href="https://preservetube.com/watch?v=${v.id}" target="_blank" ><img src="https://i.ibb.co/SXjxP6v6/Screenshot-20250625-224044-Brave.png" width=20px></a>
+          <a href="https://alcea-wisteria.de/hidrive/hidrive.php?path=/public/ytarchive/${v.id}.mp4" target="_blank" ><img src="https://media.technologycounter.com/vendors/software-products/software-logo/hidrive.jpg" width=20px></a>
       </div>
       <button class="toggle-src" data-id="${v.id}">🔁 Switch to Direct</button>
     `;
